--- a/Week 1 Self Check Questions - Solutions.ipynb
+++ b/Week 1 Self Check Questions - Solutions.ipynb
@@ -37,7 +37,7 @@
     "$$\n",
     "\\|A\\|_{\\infty} = \\max_{\\|x\\|_{\\infty} = 1} \\max_i |\\left[Ax\\right]_i| \\leq \\max_i \\sum_{j}|a_{ij}|.\n",
     "$$\n",
-    "Let $\\hat{i}$ be the row index for which the upper bound is attained. By choosing $x_j = \\text{sign} a_{\\hat{i}j}|$ we have that $\\|Ax\\|_{\\infty} = \\max_i \\sum_{j}|a_{ij}|$, which confirms that the upper bound can be attained.\n",
+    "Let $\\hat{i}$ be the row index for which the upper bound is attained. By choosing $x_j = \\text{sign}~a_{\\hat{i}j}$ we have that $\\|Ax\\|_{\\infty} = \\max_i \\sum_{j}|a_{ij}|$, which confirms that the upper bound can be attained.\n",
     "\n"
    ]
   },
@@ -67,7 +67,7 @@
     "Let $\\hat{j}$ be the index of the largest element by magnitude in $x$. We have that\n",
     "\n",
     "$$\n",
-    "\\lim_{p\\rightarrow\\infty} \\|x\\|_p = \\lim_{p\\rightarrow\\infty} \\left[ \\sum_{j}|x|^p\\right]^{1/p} = |x_{\\hat{j}}|\\lim_{p\\rightarrow\\infty} \\left[1 +  \\sum_{j\\neq \\hat{j}}|x/\\hat{x}|^p\\right]^{1/p} = |x_{\\hat{j}}|.\n",
+    "\\lim_{p\\rightarrow\\infty} \\|x\\|_p = \\lim_{p\\rightarrow\\infty} \\left[ \\sum_{j}|x_j|^p\\right]^{1/p} = |x_{\\hat{j}}|\\lim_{p\\rightarrow\\infty} \\left[1 +  \\sum_{j\\neq \\hat{j}}|x/\\hat{x}|^p\\right]^{1/p} = |x_{\\hat{j}}|.\n",
     "$$\n"
    ]
   },
