Fixed typo in week 1 self check solution.2

--- a/week_1_self_check_solutions.ipynb
+++ b/week_1_self_check_solutions.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "$\\epsilon_{mach}$ is defined as $\\epsilon{mach} = \\frac{1}{2}b^{1-p}$, which is half the distance of $1$ to the next floating point number. It is the maximum relative error of a real number $x$ and its closest floating point representation $x'$, that is\n",
     "$$\n",
-    "|x - x'| \\leq |x|(1 + \\epsilon_{mach}).\n",
+    "|x - x'| \\leq |x|\\epsilon_{mach}.\n",
     "$$"
    ]
   },
