--- a/week_2_self_check_solutions.ipynb
+++ b/week_2_self_check_solutions.ipynb
@@ -58,7 +58,7 @@
     "We have $A^{-1} = \\begin{bmatrix}1 & -\\epsilon^{-1}\\\\ 0 & \\epsilon^{-1}\\end{bmatrix}$. Hence,\n",
     "\n",
     "$$\n",
-    "\\kappa(A) = \\|A\\|_1\\cdot \\|A^{-1}\\|_1 = 1 \\cdot \\frac{2}{\\epsilon}.\n",
+    "\\kappa(A) = \\|A\\|_1\\cdot \\|A^{-1}\\|_1 = (1+\\epsilon) \\cdot \\frac{2}{\\epsilon}.\n",
     "$$\n",
     "\n",
     "and $\\kappa(A)\\rightarrow\\infty$ as $\\epsilon\\rightarrow 0$. The reason is simple. For $\\epsilon=0$ the matrix is not invertible and we expect the condition number to become unbounded as we reach this limit case."
