--- a/week_3_self_check_questions.ipynb
+++ b/week_3_self_check_questions.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Question 1:\n",
     "\n",
-    "Let $A\\in\\mathbb{R}^{n\\times n}$. Proof that the LU decomposition exists with nonsingular $L$ and $R$ if and only if the determinant of all minors is nonzero.\n",
+    "Let $A\\in\\mathbb{R}^{n\\times n}$. Proof that the LU decomposition exists with nonsingular $L$ and $U$ if and only if the determinant of all minors is nonzero.\n",
     "(Note: The minors are the submatrices $A[:m, :m]$).\n",
     "\n",
     "Does the LU decomposition exist for the following matrix? Justify your answer. \n",
