--- a/week_3_self_check_solutions.ipynb
+++ b/week_3_self_check_solutions.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Question 1:\n",
     "\n",
-    "Let $A\\in\\mathbb{R}^{n\\times n}$. Proof that the LU decomposition exists with nonsingular $L$ and $R$ if and only if the determinant of all minors is nonzero.\n",
+    "Let $A\\in\\mathbb{R}^{n\\times n}$. Proof that the LU decomposition exists with nonsingular $L$ and $U$ if and only if the determinant of all minors is nonzero.\n",
     "(Note: The minors are the submatrices $A[:m, :m]$).\n",
     "\n",
     "Does the LU decomposition exist for the following matrix? Justify your answer. \n",
@@ -45,20 +45,20 @@
     "\\begin{bmatrix}\\hat{L} & 0\\\\\n",
     "               \\ell^T & 1\n",
     "\\end{bmatrix}\n",
-    "\\begin{bmatrix}\\hat{R} & r\\\\\n",
+    "\\begin{bmatrix}\\hat{U} & r\\\\\n",
     "               0   & \\delta\n",
     "\\end{bmatrix}\n",
     "$$\n",
-    "with $b,c, \\ell, r\\in\\mathbb{R}^{n-1}$, $\\gamma, \\delta\\in\\mathbb{R}$, $\\hat{L}, \\hat{R}\\in\\mathbb{R}^{n-1\\times n-1}$. Here $\\hat{A} = \\hat{L}\\times\\hat{R}$ is a nonsingular LU decomposition of\n",
+    "with $b,c, \\ell, r\\in\\mathbb{R}^{n-1}$, $\\gamma, \\delta\\in\\mathbb{R}$, $\\hat{L}, \\hat{U}\\in\\mathbb{R}^{n-1\\times n-1}$. Here $\\hat{A} = \\hat{L}\\times\\hat{U}$ is a nonsingular LU decomposition of\n",
     "$\\hat{A}$, which exists by induction hypothesis. To construct an LU decomposition of dimension $n$ we need to find $\\ell$, $r$ and a nonzero $\\delta$ such that the above decomposition is valid.\n",
     "\n",
-    "By inspection we obtain $r=\\hat{L}^{-1}\\hat{b}$ and $\\ell^T = c^T\\hat{R}^{-1}$, which exists since $\\hat{L}$ and $\\hat{R}$ are nonsingular. For $\\delta$ we have the expression\n",
+    "By inspection we obtain $r=\\hat{L}^{-1}\\hat{b}$ and $\\ell^T = c^T\\hat{U}^{-1}$, which exists since $\\hat{L}$ and $\\hat{U}$ are nonsingular. For $\\delta$ we have the expression\n",
     "$$\n",
     "\\delta = \\gamma - l^Tr = \\gamma - c^T\\hat{A}^{-1}b.\n",
     "$$\n",
     "Since $\\hat{A}$ is nonsingular $\\delta$ exists. It is left to show that $\\delta\\neq 0$. However, this follows from\n",
     "$$\n",
-    "\\det A = \\delta \\det\\hat{L}\\det{\\hat{R}} = \\delta\\det\\hat{A}\n",
+    "\\det A = \\delta \\det\\hat{L}\\det{\\hat{U}} = \\delta\\det\\hat{A}\n",
     "$$\n",
     "and that $\\det A$ and $\\det\\hat{A}$ are nonzero by induction hypothesis.\n",
     "\n",
