--- a/Exercise 2 Solution.ipynb
+++ b/Exercise 2 Solution.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +59,20 @@
      "output_type": "stream",
      "text": [
       "Implementation test\n",
-      "The residual is 1.6579613337369735e-11\n",
+      "The residual is 1.9058066906814195e-12\n",
       "===========\n",
-      "Time for my LU decomposition is 0.02725864000021829 s\n",
-      "Time for Scipy LU decomposition is 0.0004305999998905463 s\n",
-      "Speed ratio: 63.303855102524686\n"
+      "53.8 ms ± 3.97 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "578 µs ± 65.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "Time for my LU decomposition is 0.05074618400012696 s\n",
+      "Time for Scipy LU decomposition is 0.0004466583260000334 s\n",
+      "Speed ratio: 113.61298121222791\n"
      ]
     }
    ],
    "source": [
     "# Test implementation\n",
     "import numpy as np\n",
+    "from scipy.linalg import lu as scipy_lu\n",
     "\n",
     "n = 200\n",
     "A = np.random.rand(n,n)\n",
@@ -81,48 +84,15 @@
     "\n",
     "# Now do some timing comparisons\n",
     "\n",
-    "import timeit\n",
-    "n = 100\n",
-    "setup_string = \"\"\"\n",
-    "def lu(A):\n",
-    "    \n",
-    "    import numpy as np\n",
-    "    \n",
-    "    # Return an error if matrix is not square\n",
-    "    if not A.shape[0]==A.shape[1]:\n",
-    "        raise ValueError(\"Input matrix must be square\")\n",
-    "        \n",
-    "    n = A.shape[0] # The number of rows/columns of A\n",
-    "    \n",
-    "    L = np.zeros((n,n),dtype='float64') # Reserve space for L\n",
-    "    U = np.zeros((n,n),dtype='float64') # Reserve space for U\n",
-    "    U[:] = A # Copy A into U as we do not want to modify A\n",
-    "    np.fill_diagonal(L,1) # fill the diagonal of L with 1\n",
-    "    \n",
-    "    for i in range(n-1):\n",
-    "        # The outer iteration \n",
-    "        for j in range(i+1,n):\n",
-    "            L[j,i] = U[j,i]/U[i,i]\n",
-    "            U[j,i:] = U[j,i:]-L[j,i]*U[i,i:]\n",
-    "            U[j,i] = 0\n",
-    "    return (L,U)\n",
-    "    \n",
-    "from scipy.linalg import lu as scipy_lu\n",
-    "from numpy.random import rand\n",
+    "runtime_my_lu = %timeit -o lu(A)\n",
+    "runtime_scipy_lu = %timeit -o scipy_lu(A)\n",
     "\n",
-    "A = rand({0},{0})\n",
     "\n",
-    "\"\"\"\n",
-    "setup_string = setup_string.format(n)\n",
+    "print(\"Time for my LU decomposition is {0} s\".format(runtime_my_lu.best))\n",
     "\n",
-    "nrepeats = 5\n",
-    "runtime_my_lu = timeit.Timer('L,U=lu(A)',setup_string).timeit(number=nrepeats)/nrepeats\n",
-    "print(\"Time for my LU decomposition is {0} s\".format(runtime_my_lu))\n",
+    "print(\"Time for Scipy LU decomposition is {0} s\".format(runtime_scipy_lu.best))\n",
     "\n",
-    "runtime_scipy_lu = timeit.Timer('P,L,U=scipy_lu(A)',setup_string).timeit(number=nrepeats)/nrepeats\n",
-    "print(\"Time for Scipy LU decomposition is {0} s\".format(runtime_scipy_lu))\n",
-    "\n",
-    "print(\"Speed ratio: {0}\".format(runtime_my_lu/runtime_scipy_lu))\n",
+    "print(\"Speed ratio: {0}\".format(runtime_my_lu.best / runtime_scipy_lu.best))\n",
     "\n",
     "\n"
    ]
@@ -157,9 +127,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:dev]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dev-py"
   },
   "language_info": {
    "codemirror_mode": {
