--- a/Backward error of the LU decomposition.ipynb
+++ b/Backward error of the LU decomposition.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -181,12 +181,12 @@
    "outputs": [],
    "source": [
     "from scipy.linalg import lu\n",
-    "P,L,U=lu(matrix_with_large_rho(8))"
+    "P,L,U=lu(matrix_with_large_rho(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -197,14 +197,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  1.   0.   0.   0.   0.   0.   0.   1.]\n",
-      " [  0.   1.   0.   0.   0.   0.   0.   2.]\n",
-      " [  0.   0.   1.   0.   0.   0.   0.   4.]\n",
-      " [  0.   0.   0.   1.   0.   0.   0.   8.]\n",
-      " [  0.   0.   0.   0.   1.   0.   0.  16.]\n",
-      " [  0.   0.   0.   0.   0.   1.   0.  32.]\n",
-      " [  0.   0.   0.   0.   0.   0.   1.  64.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0. 128.]]\n"
+      "[[  1.   0.   0.   0.   0.   0.   0.   0.   0.   1.]\n",
+      " [  0.   1.   0.   0.   0.   0.   0.   0.   0.   2.]\n",
+      " [  0.   0.   1.   0.   0.   0.   0.   0.   0.   4.]\n",
+      " [  0.   0.   0.   1.   0.   0.   0.   0.   0.   8.]\n",
+      " [  0.   0.   0.   0.   1.   0.   0.   0.   0.  16.]\n",
+      " [  0.   0.   0.   0.   0.   1.   0.   0.   0.  32.]\n",
+      " [  0.   0.   0.   0.   0.   0.   1.   0.   0.  64.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   1.   0. 128.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   1. 256.]\n",
+      " [  0.   0.   0.   0.   0.   0.   0.   0.   0. 512.]]\n"
      ]
     }
    ],
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -238,7 +240,7 @@
        "Text(0, 0.5, 'rho')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -292,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.024676485713072353\n"
+      "0.05161206801240477\n"
      ]
     }
    ],
@@ -302,6 +304,26 @@
     "b = np.random.rand(n)\n",
     "x = np.linalg.solve(A,b)\n",
     "print(np.linalg.norm(np.dot(A,x)-b)/(np.linalg.norm(A)*np.linalg.norm(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.80225124630289"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.cond(A)"
    ]
   },
   {
