Added qr extra notes.

--- a/week_9_self_check_solutions.ipynb
+++ b/week_9_self_check_solutions.ipynb
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the integral $I(f):=\\int_a^bf(x)dx$. Assume that we want to approximate $I(f)$ by a Newton-Cotes quadrature rule of the form $I_2(f):=\\omega_0f(a)+\\omega_1f((a+b)/2)+\\omega_2f(b)$. Derive the corresponding weights $\\omega_0$, $\\omega_1$, and $\\omega_2$."
+    "6.) Consider the integral $I(f):=\\int_a^bf(x)dx$. Assume that we want to approximate $I(f)$ by a Newton-Cotes quadrature rule of the form $I_2(f):=\\omega_0f(a)+\\omega_1f((a+b)/2)+\\omega_2f(b)$. Derive the corresponding weights $\\omega_0$, $\\omega_1$, and $\\omega_2$."
    ]
   },
   {
