Added advanced interpolation notebook

--- a/Interpolation and Quadrature.ipynb
+++ b/Interpolation and Quadrature.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -329,10 +329,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe03ccdbca0>"
+       "<matplotlib.legend.Legend at 0x7f8b22d22460>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
