--- a/week_9_self_check_solutions.ipynb
+++ b/week_9_self_check_solutions.ipynb
@@ -143,8 +143,15 @@
     "& = & \\int_{-1}^1\\frac{t(t-1)}{2}\\frac{b-a}{2}dt\\nonumber\\\\\n",
     "& = & \\frac{b-a}{6}.\n",
     "\\end{eqnarray}\n",
-    "We now use the symmetry of Newton-Cotes rules to derive that $\\omega_2 = \\omega_0 = \\frac{b-a}{6}$. Since the sum of all weights must be one we obtain $\\omega_1 = \\frac{4(b-a)}{6}$."
+    "We now use the symmetry of Newton-Cotes rules to derive that $\\omega_2 = \\omega_0 = \\frac{b-a}{6}$. Since the sum of all weights must be $(b-a)$ we obtain $\\omega_1 = \\frac{4(b-a)}{6}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
